--- a/README.org
+++ b/README.org
@@ -21,7 +21,42 @@ GECCOS]]
 
 Please note that these screenshots are preliminary. The displays are
 still subject to major changes, also most implementations are not
-complete.
+complete. 
+
+There are currently 2 themes available, one dark and one (newer) based 
+on neumorphic principles
+
+*** Neumorph Theme 
+
+Telemetry Frame Display:
+
+#+CAPTION: TM Frame Display
+[[file:screenshots/TMFrames_Neumorph.png]]
+
+Telemetry Packet Display:
+
+#+CAPTION: TM Packet Display
+[[file:screenshots/TMPackets_Neumorph.png]]
+
+#+CAPTION: Commanding
+[[file:screenshots/TCTab_Neumorph.png]]
+
+#+CAPTION: TC History
+[[file:screenshots/TCHistory_Neumorph.png]]
+
+Connections Tab:
+
+#+CAPTION: Connections Display
+[[file:screenshots/Connections_Neumorph.png]]
+
+Configuration Tab:
+
+#+CAPTION: Configuration Display
+[[file:screenshots/Config_Neumorph.png]]
+
+
+
+*** Dark Theme 
 
 Telemetry Frame Display:
 
@@ -55,6 +90,7 @@ Connections Tab:
 
 #+CAPTION: Connections display
 [[file:screenshots/Connections.png]]
+
 
 ** Building
    :PROPERTIES:
