--- a/README.org
+++ b/README.org
@@ -116,7 +116,7 @@ AURIS uses GTK with the gobject introspection bindings in Haskell. So several pa
  - GTK3 + development packages
 
 #+BEGIN_EXAMPLE
-sudo apt install build-essential libgmp-dev gobject-introspection libgtk-3-dev
+sudo apt install build-essential libgmp-dev gobject-introspection libgirepository-1.0-dev libgtk-3-dev libgtksourceview-3.0-dev
 #+END_EXAMPLE
 
 *** Building with =stack=
